# gz-sim-plugins

./: .gitignore  LICENSE  README.md  ariac_camera_plugin  migration_steps.md
docs/: cheat-sheet.md  migration_steps.md
light_plugin_gz/: CMakeLists.txt  README.md
light_plugin_gz/include/light_plugin_gz/: modify_light_plugin.hpp
light_plugin_gz/src/: modify_light_plugin.cpp
light_plugin_gz/worlds/: new.sdf  sphere_light_world.sdf
ws/src/ariac_camera_plugin/: CMakeLists.txt  README.md  package.xml
ws/src/ariac_camera_plugin/include/ariac_camera_plugin/: ariac_camera_plugin.hpp
ws/src/ariac_camera_plugin/models/rgb_camera/: model.sdf
ws/src/ariac_camera_plugin/src/: ariac_camera_plugin.cpp
ws/src/ariac_camera_plugin/worlds/: camera_world.sdf
